fix: readability - left layout

--- a/src/components/layout/layout.module.scss
+++ b/src/components/layout/layout.module.scss
@@ -27,7 +27,7 @@ section:after {
     justify-content: center;
     align-items: center;
     flex: 1 1 90%;
-    font-size: $font-large;
+    font-size: $font-extra_large;
     font-family: 'Lobster', cursive;
   }
   .navi {
